2-loadBalancer/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: greeting-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
      - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
