2-loadBalancer/destinationruleSticky.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: greeting-dr
spec:
  host: "greeting"
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          consistentHash:
            httpCookie:
              name: session_id
              ttl: 0s
    - name: v3
      labels:
        version: v3
